Day 42 completed - Fixed Analytics charts, Notifications bell, Email alerts, Log upload (4 logs)